[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.1.3"
numpy = "^1.24.2"
pydub = "^0.25.1"
Flask-Cors = "^3.0.10"
pytube = "^12.1.2"
cloudinary = "^1.33.0"
Flask-Limiter = "^3.5.0"
gardenlinux = "^1.1735.0"
requests = "^2.31.0"
user-agent = "^0.1.10"
algorithm = "^1.2.0"
api = "^0.0.7"
pyDes = "^2.0.1"
crypto = "^1.4.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"